Fix a bug with the after party section getting a scrollbar

--- a/_sass/_schedule.scss
+++ b/_sass/_schedule.scss
@@ -119,4 +119,8 @@
         }
     }
 
+  .after-party {
+    // 'fix' a bug that causes scrollbar to appear
+    height: 305px;
+  }
 }
